--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ img{
         }
 li{
     text-align: center;
-    font-size: medium;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 500;
 }
 
@@ -40,4 +39,11 @@ text-align: center;
 
 #return{
     text-align: center;
+}
+.home-headings{
+    font-size: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    color: blanchedalmond;
+    background-color: crimson;
 }
