--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*{
+    padding: 10px;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
 .Headings{
     font-family: Cambria, Cochin, verdana, 'Times New Roman', serif;
     color: rgb(20, 2, 71);
@@ -17,11 +23,10 @@ img{
     margin-left: auto;
     margin-right: auto;
     height: auto;
-    width: 500px
+    width: 500px;
         }
 li{
-    text-align: center;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 500;
 }
 
@@ -34,14 +39,14 @@ h1,h2{
 .paragraph{
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 18px;
-text-align: center;
+text-align: left;
 }
 
 #return{
     text-align: center;
 }
 .home-headings{
-    font-size: 50px;
+    font-size: 35px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     color: blanchedalmond;
