--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     border-width: 5px;
     border-style: solid;
     border-color: red gray rgba(165, 0, 0, 0.877) rgb(119, 119, 119);
-}
+    }
 .Headings{
     font-family: Cambria, Cochin, verdana, 'Times New Roman', serif;
     color: rgb(20, 2, 71);
@@ -19,6 +19,7 @@
    #main-line{
        font-size: 70px;
        text-align: center;
+       border-left: 5px solid rgba(196, 23, 0, 0.932);
        font-family: Georgia, 'Times New Roman', Times, serif;
    }
 
