--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     margin: auto;
 }   
 .main-page-content{
+    display: flex;
+    flex-flow: column;
+    padding: 3px;
     border-width: 5px;
     border-style: solid;
     border-color: red gray rgba(165, 0, 0, 0.877) rgb(119, 119, 119);
@@ -15,45 +18,53 @@
     align-items: center;
     font-size: 45px;
    }
-
-   #main-line{
-       font-size: 70px;
-       text-align: center;
-       border-left: 5px solid rgba(196, 23, 0, 0.932);
-       font-family: Georgia, 'Times New Roman', Times, serif;
+#main-line{
+    font-size: 70px;
+    background-color: #c0c0c0;
+    border-left: 7px solid rgba(196, 23, 0, 0.932);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+figure{
+    border: #c0c0c0;
+    border-radius: 2px;       
+    border-width: thin;
+    border-style: solid;
+    display: flex;
+    flex-flow: column;
+    padding: 1px;
+    max-width: 70%;
+    margin: auto;
    }
-
 img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: auto;
-    width: 500px;
-        }
-li{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    max-width: 1800px;
+    max-height: 920px;
+    }
+figcaption{
+    background-color: #222;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;
+    }   
+.main-page-content ul .ingredients li{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500;
-}
-
+    font-style: italic;
+    font-size: medium;
+    }
 h1,h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     color: rgba(196, 23, 0, 0.932);
-    background-color: rgb(160, 160, 160);
-}
-.paragraph{
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-text-align: left;
-}
-
+    background-color: rgb(160, 158, 158);
+    border-left: 3px solid rgba(196, 23, 0, 0.932);
+    }
 #return{
     text-align: center;
-}
-.home-headings{
+    }
+.main-page-content ul a li .home-headings{
     font-size: 35px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
     color: blanchedalmond;
     background-color: crimson;
-}
+    }
