--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ figcaption{
     padding: 3px;
     text-align: center;
     }   
-.main-page-content ul .ingredients li{
+.main-page-content ul div li{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500;
     font-style: italic;
@@ -62,9 +62,11 @@ h1,h2{
 #return{
     text-align: center;
     }
-.main-page-content ul a li .home-headings{
+.main-page-content ul a li{
     font-size: 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: blanchedalmond;
-    background-color: crimson;
+    text-align: center;
+    text-decoration: underline;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(241, 177, 0);
+    background-color: rgb(218, 2, 45);
     }
