--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
     background-size: auto;
     background-attachment: fixed;
     background-position: top;
+    background-blend-mode: color-burn;
 }   
 .main-page-content{
-    background-color: rgba(193, 231, 231, 0.521);
+    background-color: rgba(224, 208, 173, 0.568);
     display: flex;
     flex-flow: column;
     padding: 3px;
@@ -34,6 +35,7 @@
     margin: 0px 10px 0px 10px;
     border-left: 7px solid rgba(196, 23, 0, 0.932);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 150px;
     }
 figure{
     display: flex;
@@ -75,6 +77,7 @@ h1,h2{
     color: rgb(241, 177, 0);
     background-color: rgb(218, 2, 45);
     border: 2px dotted rgb(241, 177, 0);
+    margin-bottom: 70px;
     }
     .return-back{
         display: inline-flex;
